fixed the timezone problems starting all stories collapsed showing sources initially

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,7 +47,7 @@ small {
     padding: 2px 0 5px;
 }
 
-p.url-sublinks {
+.url-sublinks {
     margin: 0;
     line-height: normal;
     opacity: 0.7;
@@ -58,8 +58,21 @@ p.url-sublinks {
     transition: all 200ms ease-in-out;
 }
 
-p.url-sublinks:hover {
+.url-sublinks:hover {
     opacity: 1;
+}
+
+
+.desaturate {
+    filter: grayscale(100%);
+
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out;
+}
+.desaturate:hover {
+    filter: grayscale(0);
 }
 
 .mainstory .url-content {
